--- a/src/SB/CoreBundle/Resources/config/routing.yml
+++ b/src/SB/CoreBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-homepage:
-    path:     /
-    defaults: { _controller: SBCoreBundle:Default:redirect }
+#homepage:
+#    path:     /
+#    defaults: { _controller: SBCoreBundle:Default:redirect }
