--- a/src/SB/PostBundle/Resources/config/services.yml
+++ b/src/SB/PostBundle/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
 #    sb_posts.example:
-#        class: SB\PostsBundle\Example
+#        class: SB\PostBundle\Example
 #        arguments: ["@service_id", "plain_value", "%parameter%"]
